<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pl.edu.pwr.lab1raczycki.lab1.MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/Count"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/Height"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/InputHeight"
        android:layout_below="@+id/InputHeight"
        android:layout_marginTop="10dp"
        android:text="@string/Mass"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/InputHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginRight="20dp"
        android:layout_toStartOf="@+id/unitHeight"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/unitHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/InputHeight"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/InputHeight"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="m"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/unitMass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/InputMass"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/unitHeight"
        android:layout_alignTop="@+id/InputMass"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="kg"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/InputMass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/InputHeight"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_toStartOf="@+id/unitMass"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/InputMass"
        android:layout_below="@+id/InputMass"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/Units"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:layout_marginRight="15dp"
        android:layout_toStartOf="@+id/unitMass"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/Metrical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Metrical"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/Imperial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Imperial"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/Count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroup"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Count"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/BMI"
        android:textSize="24sp"
        android:layout_above="@+id/Output"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/Output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:textSize="80sp"
        android:layout_above="@+id/Output2" />

    <TextView
        android:id="@+id/Output2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="24sp" />

</RelativeLayout>
